--- a/WebApp1/Web.config
+++ b/WebApp1/Web.config
@@ -10,15 +10,15 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp1-20181115102141.mdf;Initial Catalog=aspnet-WebApp1-20181115102141;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AAAAAEntities" connectionString="metadata=res://*/Models.Book.csdl|res://*/Models.Book.ssdl|res://*/Models.Book.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-323BCND\SQLEXPRESS;initial catalog=AAAAA;persist security info=True;user id=test01;password=aa1aa1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  
+    <add name="AAAAAEntities" connectionString="metadata=res://*/Models.BookStore.csdl|res://*/Models.BookStore.ssdl|res://*/Models.BookStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-323BCND\SQLEXPRESS;initial catalog=AAAAA;user id=test01;password=aa1aa1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="RouteDebugger:Enabled" value="true" /></appSettings>
+    <add key="RouteDebugger:Enabled" value="true" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
