--- a/WebApp1/WebApp1.csproj
+++ b/WebApp1/WebApp1.csproj
@@ -58,6 +58,12 @@
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="RouteDebugger, Version=2.1.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\routedebugger.2.1.5\lib\net40\RouteDebugger.dll</HintPath>
     </Reference>
@@ -208,6 +214,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
+    <Compile Include="Controllers\BookInforsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PublisherController.cs" />
@@ -216,49 +223,46 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Author.cs">
-      <DependentUpon>Book.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Book.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Book.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Book.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Book.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Book.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Book.edmx</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BookAuthor.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BookInfor.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BookStore.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStore.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BookStore.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStore.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BookStore.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookStore.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Category.cs">
-      <DependentUpon>Book.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\MyName.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Product.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ProductImage.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Publisher.cs">
-      <DependentUpon>Book.tt</DependentUpon>
+      <DependentUpon>BookStore.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>Book.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\ViewModel\BookInforView.cs" />
+    <Compile Include="Models\ViewModel\PublisherView.cs" />
+    <Compile Include="Models\ViewModel\AuthorView.cs" />
+    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -267,36 +271,37 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\Book.Context.tt">
+    <Content Include="Models\BookStore.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Book.edmx</DependentUpon>
-      <LastGenOutput>Book.Context.cs</LastGenOutput>
+      <DependentUpon>BookStore.edmx</DependentUpon>
+      <LastGenOutput>BookStore.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\Book.tt">
+    <Content Include="Models\BookStore.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Book.edmx</DependentUpon>
-      <LastGenOutput>Book.cs</LastGenOutput>
+      <DependentUpon>BookStore.edmx</DependentUpon>
+      <LastGenOutput>BookStore.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EntityDeploy Include="Models\Book.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Book.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\Book.edmx.diagram">
-      <DependentUpon>Book.edmx</DependentUpon>
-    </Content>
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Areas\Admin\Views\web.config" />
+    <EntityDeploy Include="Models\BookStore.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BookStore.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\BookStore.edmx.diagram">
+      <DependentUpon>BookStore.edmx</DependentUpon>
+    </Content>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -355,6 +360,11 @@
     <Content Include="Views\Author\Details.cshtml" />
     <Content Include="Views\Author\Edit.cshtml" />
     <Content Include="Views\Author\Index.cshtml" />
+    <Content Include="Views\BookInfors\Create.cshtml" />
+    <Content Include="Views\BookInfors\Delete.cshtml" />
+    <Content Include="Views\BookInfors\Details.cshtml" />
+    <Content Include="Views\BookInfors\Edit.cshtml" />
+    <Content Include="Views\BookInfors\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
