--- a/WebApp1/packages.config
+++ b/WebApp1/packages.config
@@ -53,6 +53,8 @@
   <package id="NLog.Config" version="4.5.11" targetFramework="net45" />
   <package id="NLog.Schema" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="routedebugger" version="2.1.5" targetFramework="net45" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
